<resources>
    <string name="app_name">GameTetris</string>
    <string name="configurar">Configurar</string>
    <string name="novo_jogo">Novo Jogo</string>
    <string name="esq">Esq</string>
    <string name="dir">Dir</string>
    <string name="rot">Rot</string>
    <string name="facil">Fácil</string>
    <string name="medio">Médio</string>
    <string name="dificil">Difícil</string>
    <string name="rotacionar">Rotacionar</string>
    <string name="configuracoes">Configurações:</string>
    <string name="pontuacao">Pontuação</string>
    <string name="proxima">Próxima</string>
    <string name="baixo">Baixo</string>
    <string name="pause">Pause</string>
    <string name="texto_conf">Selecione o nível do jogo</string>
    <string name="semValor">---</string>
    <string name="resultados">Resultados</string>
    <string name="sair">Sair</string>
    <string name="continuar">Continuar</string>
    <string name="novo_recorde">Novo Recorde</string>
    <string name="aplicar">Aplicar</string>
    <string name="proximaPeca">Próxima:</string>
</resources>
