<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#00FA9A"

    android:gravity="center">

    <GridLayout
        android:id="@+id/gridboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnEsquerda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/esq" />

        <Button
            android:id="@+id/btnDireita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dir" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRotacionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rotacionar" />


</LinearLayout>