<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoActivity"
    android:orientation="vertical"
    android:background="#011F27"
    android:gravity="center">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tetris" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#E7CD05"
        android:textSize="45sp"
        tools:text="GAME OVER" />


    <TextView
        android:id="@+id/idPontucao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/idScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/idNovoRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/novo_recorde"
        android:textColor="#06DFF5"
        android:textSize="30sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnNovoJogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#011F27"
        android:text="@string/novo_jogo"

        android:textColor="#ffffff"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnSair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#011F27"
        android:text="@string/sair"
        android:textColor="#ffffff"
        android:textSize="18sp" />



</LinearLayout>