<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FA9A"
    tools:context=".ConfiguracaoActivity">

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radioFacil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facil"
            android:textSize="18sp" />


        <RadioButton
            android:id="@+id/radioMedio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medio"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioDificil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dificil"
            android:textSize="18sp" />

    </RadioGroup>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="149dp"
        android:layout_height="166dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/conf" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Configurações: "
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/button"
        android:layout_width="193dp"
        android:layout_height="66dp"
        android:layout_marginBottom="44dp"
        android:background="@color/colorAccent"
        android:text="Aplicar"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>